feat(launcher): modern Forge + NeoForge via headless installer
Modern loaders (Forge 1.13+, all NeoForge) patch the client through install
processors, so run the official installer headless via the managed JDK and
consume its output rather than reimplementing them.

- ModernInstallerResolver: install into a persistent per-(loader,mc,version)
  cache (skip on a completion marker), harvest the produced version json +
  libraries as localFile copies into the shared root. neoforge/forge factories.
- ForgeResolver routes id "forge" to the legacy (<=1.12.2) or modern resolver
  by Minecraft version.
- arguments model: MojangArguments + flattenArguments (OS rules, features
  dropped, placeholders preserved); ensureVanilla captures vanilla jvm/game
  args, ensureRuntime prepends vanilla JVM args to a modern overlay.
- buildPackCommand handles three launch eras (launchwrapper/Knot, modlauncher,
  BootstrapLauncher): placeholder substitution + module path; -noverify chosen
  by Java major.
- detectJavaVersion promoted to the IJavaManager interface.